<resources>
    <string name="app_name">APKExport</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Open APKExport</string>
    <string name="action_multi_select">Mutlit Select</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="app_installed_not">"No installed applications"</string>
    <string name="packagename">"PackageName"</string>
    <string name="appInfo">"Application Info"</string>
    <string name="appname">"AppName"</string>
    <string name="appsize">"AppSize"</string>
    <string name="appversion">"Version:"</string>
    <string name="datadetail" translatable="false">"Data(0.00B)"</string>
    <string name="datadiv" translatable="false">"  -  "</string>
    <string name="dataInfo" translatable="false">"  -  Data: "</string>
    <string name="search">"Search…"</string>
    <string name="app_uninstall_success">"Application has been uninstalled"</string>
    <string name="app_uninstall_failed">"Application uninstalled failed"</string>
    <string name="exporting">"Exporting…"</string>
    <string name="prepare_for_share">"Prepare for share"</string>
    <string name="export_completed">"Export Completed! Apk File Saved As"</string>
    <string name="title_multi_action">Multi Action</string>
    <string name="loading">"Loading..."</string>
    <string name="Refreshing">"Refreshing..."</string>
    <string name="share_to">Share %1$s to...</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="about_page_description">APKExport is an app that you can use to export apks form apps installed in the phone.\\nThe unique “Super Export” feature allows you to export other app’s apk when the apps share contents to APKExport.</string>
    <string name="about_feedback_title">QQ group#1: %1$s</string>
    <string name="about_feedback_title2">QQ group: %1$s</string>
    <string name="about_feedback_tips">QQ group number has been copied to clipboard!</string>
    <string name="about_no_QQ_app">Can not Launch QQ App</string>
    <string name="about_email_contact">Contact us: leftshine@foxmail.com</string>
    <string name="about_email_contact_subject">Feed back of %1$s</string>
    <string name="about_email_contact_text">I just want to say：</string>
    <string name="about_website_title">Visit our home page online</string>
    <string name="about_donate_title">Want to offer us a cup of coffee?</string>
    <string name="about_version_title">Version: %1$s</string>
    <string name="about_open_source_licenses_title">Open source licenses</string>
    <string name="about_open_source_licenses_content" translatable="false">
        android-about-page: <a href="https://github.com/medyo/android-about-page">MIT</a>

        android-filepicker: <a href="https://github.com/Angads25/android-filepicker">Apache</a>
    </string>
    <string name="auto_clean_running">Auto-Clean Running…</string>
    <string name="clean_running">Cleanup Running…</string>
    <string name="auto_clean_success">Clean up the export directory: success</string>
    <string name="auto_clean_fail">Clean up the export directory: fail</string>
    <string name="one_more_click_to_exit">One more click to exit</string>
    <string name="user_app">User App</string>
    <string name="system_app">System App</string>
    <string name="local_apk">Local APK</string>
    <string name="title_activity_setting">Settings</string>
    <string name="setting_title_ui">UI &amp; UX</string>
    <string name="setting_general_title">General</string>
    <string name="setting_export_title">Share &amp; Export</string>
    <string name="setting_export_open">Open</string>
    <string name="custom_export_path">Custom Export Path</string>
    <string name="setting_autoClean_title">Auto Clean</string>
    <string name="setting_autoClean_cacheDir_title">Clean up cache when launch</string>
    <string name="setting_autoClean_exportDir_title">Clean up export directory when launch</string>
    <string name="setting_autoClean_summaryOff">APKs exported will not be deleted</string>
    <string name="setting_autoClean_summaryOn">APKs exported will be deleted the next time you open the app</string>
    <string name="setting_shareWithExport_title">Share with Export</string>
    <string name="setting_shareWithExport_summaryOff">The APK will not be exported when share</string>
    <string name="setting_shareWithExport_summaryOn">The APK will be exported when share</string>
    <string name="setting_super_export_title">Super Export</string>
    <string name="setting_export_direct_title">Direct Mode</string>
    <string name="setting_export_direct_summaryOff">Use full-mode for super export</string>
    <string name="setting_export_direct_summaryOn">Use direct-mode for super export </string>
    <string name="setting_show_local_apk_title">Show \'LOCAL APK\' Tab</string>
    <string name="setting_show_local_apk_summaryOff">Hide</string>
    <string name="setting_show_local_apk_summaryOn">Display</string>
    <string name="setting_toolbar_fixed_title">Fixed Toolbar</string>
    <string name="setting_toolbar_fixed_summaryOff">Scrollable</string>
    <string name="setting_toolbar_fixed_summaryOn">Fixed</string>
    <string name="setting_ux_opt_title">UX Optimization</string>
    <string name="setting_ux_opt_summaryOff">Efficiency First</string>
    <string name="setting_ux_opt_summaryOn">Experience First, High-Performance Devices Recommended to be Enabled</string>
    <string name="custom_file_name">Custom File Name Format</string>
    <string name="custom_file_name_summary">Click to set the filename format</string>
    <string name="custom_file_name_description">#N as App Name\n#P as Package Name\n#V as Version Name\n#C as Version Code</string>
    <string name="custom_file_name_insert">Insert: </string>
    <string name="custom_file_name_n" translatable="false">#N</string>
    <string name="custom_file_name_P" translatable="false">#P</string>
    <string name="custom_file_name_v" translatable="false">#V</string>
    <string name="custom_file_name_c" translatable="false">#C</string>
    <string name="custom_file_name_default">#N-#P-#V</string>
    <string name="custom_filename_preview">Preview: </string>
    <string name="setting_long_press_action_title">Action of Long Press</string>
    <string name="setting_sort_group_title">Sort</string>
    <string name="setting_sort_type_title">Sort By...</string>
    <string name="setting_sort_order_title">Order</string>
    <string name="setting_advance_group_title">Advance</string>
    <string name="setting_restore_default_settings_title">Restore Default Settings</string>
    <string name="setting_restore_default_settings_description">Ensure to Restore Default Settings?</string>
    <string name="setting_clean_export_dir_title">Clean up Export Directory</string>
    <string name="setting_clean_export_dir_summery">size: </string>
    <string name="setting_clean_export_dir_summery_clean_Running">Cleanup Running…</string>
    <string name="setting_clean_export_dir_summery_clean_done">Cleared</string>
    <string name="setting_all_files_access_permission_title">Grant \'All File Access\' Permissions</string>
    <string name="setting_all_files_access_permission_summary">Grant this permissions only export failed</string>
    <string name="key_is_export_direct" translatable="false">is_export_direct</string>
    <string name="key_is_auto_clean_cacheDir" translatable="false">is_auto_clean_cacheDir</string>
    <string name="key_is_auto_clean_exportDir" translatable="false">is_auto_clean_exportDir</string>
    <string name="key_is_share_with_export" translatable="false">is_share_with_export</string>
    <string name="key_is_show_local_apk" translatable="false">is_show_local_apk</string>
    <string name="key_is_toolbar_fixed" translatable="false">is_toolbar_fixed</string>
    <string name="key_is_ux_opt" translatable="false">key_is_ux_opt</string>
    <string name="key_custom_filename_format" translatable="false">custom_filename_format</string>
    <string name="key_custom_export_path" translatable="false">custom_export_path</string>
    <string name="key_long_press_action" translatable="false">long_press_action</string>
    <string name="key_dark_mode" translatable="false">dark_mode</string>
    <string name="key_language" translatable="false">custom_language</string>
    <string name="key_sort_type" translatable="false">sort_type</string>
    <string name="key_sort_order" translatable="false">sort_order</string>
    <string name="key_advance" translatable="false">advance</string>
    <string name="key_restore_default_settings" translatable="false">restore_default_settings</string>
    <string name="key_clean_cacheDir" translatable="false">clean_cache_dir</string>
    <string name="key_clean_ExportDir" translatable="false">clean_export_dir</string>
    <string name="key_all_files_access_permission" translatable="false">all_files_access_permission</string>
    <string name="choose_sort_type">Sort By...</string>
    <string name="ASC">ASC</string>
    <string name="DES">DES</string>
    <string name="choose_next_action">Then…</string>
    <string name="input_new_name">Input the new file name</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Confirm to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="copy_success">Copy_Success:%1$s</string>
    <string name="custom_export_path_summary" translatable="false">APKExport</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>
    <string name="export_file_name">File Name</string>
    <string name="insert_app_name">APP Name</string>
    <string name="insert_package_name">Package Name</string>
    <string name="insert_version_name">Version Name</string>
    <string name="insert_version_code">Version Code</string>
    <string name="only_export">Export</string>
    <string name="share_after_export">Share</string>
    <string name="share_file_name_default">Default</string>
    <string name="super_export">Super Export</string>
    <string name="tip_direct_share">Direct Mode Running...</string>
    <string name="storage_permission_dialog_content">Can not scan the APK files without storage permission</string>
    <string name="storage_permission_dialog_positive">OK, let me try again</string>
    <string name="storage_permission_dialog_go_setting">OK, Go to Setting</string>
    <string name="storage_permission_dialog_negative">No</string>
    <string name="storage_permission_copy_dialog_content">Can not export APK files without the storage permission</string>
    <string name="storage_permission_auto_clean_dialog_content">Can not delete APK files without the storage permission</string>
    <string name="storage_permission_custom_export_path_dialog_content">Can not custom path without the storage permission</string>
    <string name="installed_permission_dialog_content">To display the list of installed apps, the app requires permission to access the application list. If this permission is not granted, the installed apps cannot be displayed properly.</string>
    <string name="storage_permission_obtain_toast">Storage permission granted. Now you can go on.</string>
    <string name="tip_copy_failed">Copy failed: </string>
    <string name="tip_file_not_exist">file is not exist</string>
    <string name="tip_share_failed">share failed</string>
    <string name="multi_export">Export</string>
    <string name="multi_share">Share</string>
    <string name="multi_select_all">All</string>
    <string name="multi_unselect_all">Clear Selection</string>
    <string name="multi_exit">Exit Multiple Mode</string>
</resources>