<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.leftshine.apkexport.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_by_alpha_white_24dp"
        android:title="@string/action_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_select"
        android:icon="@drawable/ic_playlist_add_check_white_24dp"
        android:title="@string/action_multi_select"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/action_help" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about" />
</menu>
