<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.leftshine.apkexport.activity.MainActivity">

    <item
        android:id="@+id/multi_export"
        android:orderInCategory="100"
        android:title="@string/multi_export"
        app:showAsAction="always"/>
    <item
        android:id="@+id/multi_share"
        android:orderInCategory="100"
        android:title="@string/multi_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/select_all"
        android:orderInCategory="100"
        android:title="@string/multi_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unselect_all"
        android:orderInCategory="200"
        android:title="@string/multi_unselect_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exit_multi_mode"
        android:orderInCategory="200"
        android:title="@string/multi_exit"
        app:showAsAction="ifRoom" />
</menu>